# smt

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  Cópia_de_SMT_MixedInteger_application.ipynb  GEKPLS_QKG.py  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  SMT_MixedInteger_application.ipynb  __init__.py  appveyor.yml  environment.yml  example_GEKPLS_QKG.py  files.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  testUML.py  tutorial_mixed_variables.ipynb
doc/: .embedrc  GEKPLS.html  GEKPLS.ipynb  IDW.html  IDW.ipynb  KPLS.html  KPLS.ipynb  KPLSK.html  KPLSK.ipynb  Kriging.html  Kriging.ipynb  LS.html  LS.ipynb  Makefile  Nomenclature.html  Nomenclature.ipynb  PA2.html  PA2.ipynb  RBF.html  RBF.ipynb  RMTS.html  RMTS.ipynb  SMT.html  SMT.ipynb  conf.py  examples.html  examples.ipynb  generate_options_table.py  index.rst  index.rstx  make.bat  preprocess.py  preprocess_options.py  preprocess_test.py  problems.html  problems.ipynb  requirements.txt  sampling.html  sampling.ipynb  sphere.py  (+7 more)
doc2/: Makefile  conf.py  index.rst  preprocess.py  preprocess_options.py  preprocess_test.py  requirements.txt
examples/: #run_plot.py#  doe_lhs.py  kriging_utils.py  run_examples.py  run_linux.py  run_moe.py  run_plot.py  run_vfm.py  run_windows.py  test.py  test_linux.py  test_lowdim_dense.py  test_plot.py  test_rmts.py  test_windows.py  testplot.py  tools_benchmark.py  tools_doe.py
smt/: Paul_Changelog.txt  __init__.py  functions.py  idw.py  kpls.py  linalg.py  line_search.py  linear_solvers.py  ls.py  mbr.py  pa2.py  pairwise.py  pls.py  rbf.py  rmt.py  rmtb.py  rmtc.py  rmts.py  sm.py  utils.py  validation.py
src_f/: idw.f95  mbr.f95  rbf.f95  rmtb.f95  rmtc.f95  rmts.f95  tps.f95  utils.f95
(+857 files in other folders)
